--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet" />
-    <title>FiverrUI</title>
+    <title>Fiverr Clone</title>
     <script
       src="https://upload-widget.cloudinary.com/global/all.js"
       type="text/javascript"></script>
