--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   </head>
   <body class="relative font-poppins font-normal text-neutral-800 leading-normal">
     <div id="root" class="flex flex-col min-h-screen"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
