--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       src="https://upload-widget.cloudinary.com/global/all.js"
       type="text/javascript"></script>
   </head>
-  <body class="relative font-poppins font-normal text-neutral-800 leading-normal">
+  <body class="relative font-poppins font-normal text-zinc-700 leading-normal">
     <div id="root" class="flex flex-col min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
